--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,6 @@
 @import "./base/flex";
 
 @import "./components/header";
+@import "./components/title";
+@import "./components/installer-form-container";
+@import "./components/installer-button";
