--- a/src/scss/components/_installer-button.scss
+++ b/src/scss/components/_installer-button.scss
@@ -5,4 +5,11 @@
   text-decoration: none;
   border-radius: 4px;
   text-align: center;
+  width: 100%;
+}
+
+.installer-button-container{
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
 }
